# XY_math

./: .gitignore  LICENSE  README.md  flake.nix  math.latex  tui  xy-math.cabal  xy_calc.cabal
.github/workflows/: haskell.yml
nix/: hix.nix  serve-docs.nix
src/: Main.hs
