cabal-version: 3.6

name: xy-math
version: 0.0.0.1

common shared-libs
  build-depends:  base >=4.11 && <4.18
                -- , memory
                -- , filepath
                -- , time
                -- , bytestring
                -- , vector
                -- , unordered-containers
                -- , text
                -- , containers
  ghc-options: -O2

executable desaturateXY
  import: shared-libs
  hs-source-dirs: src
  main-is: Main.hs
  -- other-modules:  Movies, NFO, JSON
  build-depends:  matrix
                , linear
                -- , directory
                -- , conduit-extra
                -- , free
                -- , optparse-applicative
                -- , xml-conduit
                -- , aeson
                -- , conduit-combinators
                -- , conduit
                -- , directory
                -- , resourcet

